# parser_with_db

./: .gitignore  README.md  data_db.db  pyproject.toml
parser_with_db/: parser.py
parser_with_db/src/: config.py  processor.py  repositories.py  requests.py  test_response.py  type_column.py
