[tool.poetry]
name = "parser-with-db"
version = "0.1.0"
description = ""
authors = ["aleks <newacb1979@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiosqlite = "^0.20.0"
aiohttp = "^3.10.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
